--- a/css/css_description.css
+++ b/css/css_description.css
@@ -3,5 +3,83 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
+    font-size: 12px;
 }
 
+.common_frame {
+    position: relative;
+    width: 564px;
+    height: 2000px;
+    z-index: 50;
+    left: 50%;
+    margin: 200px 0 0 -282px;
+}
+
+/*common attributes for pages*/
+.first_page, .second_page, .third_page {
+    border: 2px solid #000000;
+    width: 519px;
+    height: 746px;
+}
+
+.first_page {
+    background-color:  #ebebeb;
+
+    position: absolute;
+    z-index: 3;
+}
+
+.second_page {
+    background-color:  #cccccc;
+
+    position: absolute;
+    top: 20px;
+    left: 21px;
+    z-index: 2;
+
+}
+
+.third_page {
+    background-color:  #acacac;
+
+    position: absolute;
+    top: 39px;
+    left: 40px;
+    z-index: 1;
+}
+
+/*common attributes for bookmarks*/
+.bookmark {
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+    border: 2px solid #000000;
+
+    height: 31px;
+}
+
+.first_page .bookmark {
+    background-color:  #f68e56;
+    width: 107px;
+
+    position: absolute;
+    top: 38px;
+    left: 494px;
+}
+
+.second_page .bookmark {
+    background-color:  #39b54a;
+    width: 95px;
+
+    position: absolute;
+    top: 43px;
+    left: 472px;
+}
+
+.third_page .bookmark {
+    background-color:  #00aeef;
+    width: 95px;
+
+    position: absolute;
+    top: 48px;
+    left: 440px;
+}
