--- a/css/css_description.css
+++ b/css/css_description.css
@@ -145,3 +145,28 @@ footer p {
     font-size: 9px;
     text-align: center;
 }
+
+.social {
+    border: 1px solid #362f2d;
+    background-color:  #fbaf5d;
+    width: 87px;
+    height: 69px;
+
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+
+.social p {
+    font-size: 16px;
+    text-align: center;
+}
+
+.social img {
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    border-radius:50%;
+    width: 25%;
+    margin: -10px 0 0 5px;
+    display: inline-block;
+}
